Pull request - 2706: AG-53613 Fix buttons on settings import modal
Squashed commit of the following:

commit f109059a09c0cb6dbe410ceb0667d6e7a1123b5d
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Mon Apr 27 20:45:58 2026 +0800

    AG-53613 Fix buttons on settings import modal

--- a/Extension/src/pages/common/styles/modal.module.pcss
+++ b/Extension/src/pages/common/styles/modal.module.pcss
@@ -180,6 +180,20 @@
             }
         }
 
+        .actions {
+            padding: 24px 0 0 0;
+        }
+
+        .btn {
+            width: 256px;
+            max-width: 256px;
+
+            @media(max-width: 640px) {
+                width: 100%;
+                max-width: 100%;
+            }
+        }
+
         @media(max-width: 640px) {
             flex-direction: column;
             align-items: center;
